--- a/main.yml
+++ b/main.yml
@@ -20,6 +20,6 @@
     - name: fetch the file
       fetch:
         src: /tmp/health/system_facts_report.html
-        dest: /tmp/test/
+        dest: /tmp/
         mode: 0775
         flat: yes
