--- a/main.yml
+++ b/main.yml
@@ -16,6 +16,7 @@
       template:
         src: system_facts_template.html.j2
         dest: /tmp/health/system_facts_report.html
+        mode: 0664
 
     - name: fetch the file
       fetch:
