--- a/app/main.yml
+++ b/app/main.yml
@@ -6,7 +6,7 @@
   tasks:
     - name: Start the application services
       include_tasks: start.yml
-      when: action is start
+      when: action == 'start'
 
     - name: Stop the application services
       import_tasks: stop.yml
