--- a/app/main.yml
+++ b/app/main.yml
@@ -3,6 +3,7 @@
   hosts: all
   become: true
   gather_facts: false
+  serial: 1
   tasks:
     - name: Start the application services
       include_tasks: start.yml
