--- a/app/main.yml
+++ b/app/main.yml
@@ -15,6 +15,10 @@
     - name: Upgrade the application
       import_tasks: upgrade.yml
       when: action == 'upgrade'
+
+    - name: Stop the application services
+      import_tasks: backup.yml
+      when: action == 'backup'
       
     - name: checking the disk of the nodes
       import_tasks: disk.yml
