--- a/main1.yaml
+++ b/main1.yaml
@@ -3,9 +3,7 @@
   become: yes
   tasks:
   - name: Copy index.html to /var/www/html
-    copy:
-      src: /data/system_facts_report.html
-      dest: /var/www/html/index.html
+    shell: cp /data/system_facts_report.html /var/www/html/index.html
 
   - name: Restart httpd
     service:
