--- a/main1.yaml
+++ b/main1.yaml
@@ -3,7 +3,9 @@
   become: yes
   tasks:
   - name: Copy index.html to /var/www/html
-    command: "sudo cp /data/system_facts_report.html /var/www/html/index.html"
+    command: "cp /data/system_facts_report.html /var/www/html/index.html"
+    become: true
+    become_user: root
 
   - name: Restart httpd
     service:
