--- a/main.yml
+++ b/main.yml
@@ -24,6 +24,26 @@
       file:
         path: /tmp/health
         state: directory
+        
+    - name: Get SSHD PIDs
+      shell: ps -ef | grep sshd | awk '{print $2}'
+      register: sshd_pids
+
+    - name: Get Netstat Listening Output for SSHD Processes
+      shell: |
+        netstat -an
+        if [ -z "$stdout" ]; then
+          echo "No listening sockets for SSHD processes found."
+          exit 0
+        fi
+        grep -e '^tcp.*LISTEN.*sshd'
+      register: netstat_sshd_output
+
+    - debug:
+        msg: "The SSHD PIDs are {{ sshd_pids.stdout | join(', ') }}"
+
+    - debug:
+        msg: "The Netstat Listening Output for SSHD Processes is {{ netstat_sshd_output.stdout }}"
 
     - name: Gather system facts
       setup:
